# autogit

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  _service  autogit-daemon.service  autogit.changes  autogit.spec  build-rpm.sh
.github/workflows/: rust.yml
autogit/: Cargo.toml  build.rs
autogit-daemon/: Cargo.toml
autogit-daemon/src/: git.rs  main.rs  socket.rs  tray.rs
autogit-shared/: Cargo.toml
autogit-shared/src/: config.rs  lib.rs  protocol.rs
autogit/src/: cli.rs  commands.rs  main.rs
