[workspace]
resolver = "2"
members = [
    "autogit-daemon",
    "autogit",
    "autogit-shared",
]

[workspace.package]
version = "0.9.0"
edition = "2021"
authors = ["Armin Walland <armin@wal.land>"]
license = "WTFPL"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.11"
anyhow = "1.0"
thiserror = "2.0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Git operations
git2 = "0.20.3"

# File watching
notify = "9.0.0-rc.1"

# CLI
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.12"

# Async runtime (if needed later)
tokio = { version = "1.49", features = ["full"] }

[profile.release]
strip = true
