[package]
name = "autogit-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "autogit-daemon"
path = "src/main.rs"

[dependencies]
autogit-shared = { path = "../autogit-shared" }

# Core dependencies
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Git operations
git2.workspace = true

# File watching
notify.workspace = true

# Async runtime
tokio.workspace = true

# Time handling
chrono = "0.4"

# Desktop notifications
notify-rust = "4"
