[package]
name = "autogit-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "autogit-daemon"
path = "src/main.rs"

[dependencies]
autogit-shared = { path = "../autogit-shared" }

# Core dependencies
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Git operations
git2.workspace = true

# File watching
notify.workspace = true

# Async runtime
tokio.workspace = true

# Time handling
chrono = "0.4"

# Desktop notifications
notify-rust = "4"

# System tray
ksni = "0.3"

# Image decoding for tray icons
image = { version = "0.25", default-features = false, features = ["png"] }

# Path manipulation
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3.24"
serial_test = "3.3"
