[package]
name = "autogit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "autogit"
path = "src/main.rs"

[dependencies]
autogit-shared = { path = "../autogit-shared" }

# Core dependencies
anyhow.workspace = true
tokio = { workspace = true }

# CLI
clap.workspace = true
dialoguer.workspace = true

# For colored output
colored = "3.0.0"

# Table formatting
tabled = "0.20.0"

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.0"

[build-dependencies]
clap = { workspace = true }
clap_complete = "4.5"
