[package]
name = "autogit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "autogit"
path = "src/main.rs"

[dependencies]
autogit-shared = { path = "../autogit-shared" }

# Core dependencies
anyhow.workspace = true
tokio = { workspace = true }

# CLI
clap.workspace = true
dialoguer.workspace = true

# For colored output
colored = "3.1.1"

# Table formatting
tabled = "0.20.0"

[dev-dependencies]
tempfile = "3.24"
serial_test = "3.3"

[build-dependencies]
clap = { workspace = true }
clap_complete = "4.5"
